--- a/apis/requirements.txt
+++ b/apis/requirements.txt
@@ -7,3 +7,10 @@ passlib
 databases
 aiomysql
 python-jose
+pydantic[email]
+pytest
+httpx
+aiosqlite
+sqlalchemy[asyncio]
+pytest-asyncio
+pytest-cov
