--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,12 @@ services:
     #   - ${PORT_FAST}
     command: ["/bin/sh", "-c", "/home/appuser/devcon/build.sh"]
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - ${PORT_REDIS}:${PORT_REDIS}   
+
   mysql_fast:
     build:
       context: ./mysql
