--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,10 @@ services:
   redis:
     image: redis:latest
     container_name: redis
+    networks:
+      - hackathon_spring_network
     ports:
-      - ${PORT_REDIS}:${PORT_REDIS}   
+      - ${PORT_REDIS}:${PORT_REDIS}
 
   mysql_fast:
     build:
